src/test/ui/consts/nested_erroneous_ctfe.stderr
error[E0308]: mismatched types
  --> $DIR/nested_erroneous_ctfe.rs:2:16
   |
LL |     [9; || [9; []]];
   |                ^^ expected `usize`, found array of 0 elements
   |
   = note: expected type `usize`
             found array `[_; 0]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
